# CS_MoCo_LAB

./: .gitignore  LICENSE  README.md
acquisition/subsampling_class/: Approx.cpp  Approx.h  CMakeLists.txt  LinkedList.cpp  LinkedList.h  Point.cpp  Point.h  README.md  SomeFunctions.cpp  SomeFunctions.h  SubsampleMain.cpp  SubsampleMain.h  VDSamplingUpper.cpp  VDSamplingUpper.h  VariableDensity.cpp  VariableDensity.h
reconstruction/c++/: .gitignore  CMakeLists.txt  CS_LAB.cpp  CS_LAB.h  CS_LAB.xml  CS_LAB_offline.xml  CS_LAB_online.xml
reconstruction/c++/cmake/: CMakeLists.txt  FindIsmrmrd.cmake
reconstruction/c++/include/: README.txt  ismrmrd.cxx
reconstruction/c++/mex/: CS_LAB_Interface.cpp
reconstruction/c++/mex/io/: fLoadXML.m  fMeasCreateLUT_main.m  fMeasReadDrecksMDH.m  fMeas_mainLUTDrecks.m
reconstruction/c++/mex/preproc/: dispProgress.m
reconstruction/c++/mex/xml_toolbox/: INSTALL.TXT  LICENSE.TXT
reconstruction/c++/src/FOCUSS/: CS_Control.cpp  CS_FOCUSS.cpp  CS_FOCUSS.h  CS_FOCUSS_2D.cpp  CS_FOCUSS_2Dt.cpp  CS_FOCUSS_3D.cpp  CS_LAB_export.h  GlobalVar_FOCUSS.h  SomeFunctions.h  SomeFunctions.hxx  Transform.cpp  Transform.h  TransformWrapper.h  hoNDDCT.h
reconstruction/c++/src/GADGET_TOOLS/: AcquisitionFinishGadget.cpp  AcquisitionFinishGadget.h  CS_AccumulatorGadget.cpp  CS_AccumulatorGadget.h  CS_CombineGadget.cpp  CS_GlobalVar.h  CS_MRIImageToAcquisitionGadget.cpp  CS_MRIImageToAcquisitionGadget.h  ImageSaveHDFGadgetCPLX.h  ImageSaveHDFGadgetFLOAT.cpp  ImageSaveHDFGadgetFLOAT.h  SlicerGadget.cpp  SlicerGadget.h
reconstruction/gadgetron/CS_LAB_Gadget/: CMakeLists.txt  CS_LAB.cpp  CS_LAB.h  CS_LAB.lib  CS_LAB_export.h  CS_LAB_offline.xml  CS_LAB_online.xml  Interface.m  gadgetron.xsd
reconstruction/gadgetron/CS_LAB_Gadget/cmake/: CMakeLists.txt  FindACE.cmake  FindCUDA_advanced.cmake  FindCULA.cmake  FindFFTW3.cmake  FindGMatlab.cmake  FindGadgetron.cmake  FindGadgetronOld.cmake  FindIsmrmrd.cmake  FindXSD.cmake  FindXercesC.cmake
reconstruction/gadgetron/CS_LAB_Gadget/cmake/FindCUDA/: cuda_compute_capability.c
reconstruction/gadgetron/CS_LAB_Gadget/config/: CS_LAB_BART_Recon.sh  CS_LAB_offline.xml  CS_LAB_online.xml  CS_Retro_offline.xml  CS_Retro_online_1.xml  CS_Retro_online_2.xml  elastix_DEFAULT.txt
reconstruction/gadgetron/CS_LAB_Gadget/include/: GadgetronCommon.h  README.txt  ismrmrd.cxx  ismrmrd.hxx
reconstruction/gadgetron/CS_LAB_Gadget/include/new/: GadgetronCommon.h  hoMatrix_util.h  hoNDArray_blas.h  hoNDArray_math_util.cpp  hoNDArray_math_util.h  hoNDArray_operators.cpp  hoNDArray_operators.h
reconstruction/gadgetron/CS_LAB_Gadget/include/old/: hoNDArray_linalg.cpp  hoNDArray_linalg.h
reconstruction/gadgetron/CS_LAB_Gadget/lib/: README.txt
reconstruction/gadgetron/CS_LAB_Gadget/mex/: CS_LAB_Interface.cpp  CS_LAB_Interface.mexw64  README_mex.txt
reconstruction/gadgetron/CS_LAB_Gadget/mex/io/: fLoadXML.m  fLoadkSpace.m  fMeasCreateLUT.m  fMeasCreateLUT_main.m  fMeasCreateLUT_mex.cpp  fMeasCreateLUT_mex.mexa64  fMeasExtractMeasPara.m  fMeasInfo.m  fMeasRead.m  fMeasReadDrecksMDH.m  fMeas_main.m  fMeas_mainLUTDrecks.m  fReadDICOM.m  fReadNewDrecksMDH.m
reconstruction/gadgetron/CS_LAB_Gadget/mex/preproc/: dispProgress.m  extractKSpace2D.m  extractKSpace3D.m  extractKSpace_main.m  extractMeasPara.m
reconstruction/gadgetron/CS_LAB_Gadget/mex/xml_toolbox/: matlab.xsd  strsplit.m  unblank.m  xml_format.m  xml_formatany.m  xml_help.m  xml_load.m  xml_parse.m  xml_parseany.m  xml_save.m  xml_toolbox-version.txt
reconstruction/gadgetron/CS_LAB_Gadget/src/: CS_LAB_export.h  debug_functions.cpp  debug_functions.h  gadgetron_messages.h
reconstruction/gadgetron/CS_LAB_Gadget/src/ELASTIX_GADGET/: ElastixRegistrationGadget.cpp  ElastixRegistrationGadget.h
reconstruction/gadgetron/CS_LAB_Gadget/src/FOCUSS/: CS_Control.cpp  CS_Control.h  CS_FOCUSS.cpp  CS_FOCUSS.h  CS_FOCUSS_2D.cpp  CS_FOCUSS_2Dt.cpp  CS_FOCUSS_3D.cpp  CS_FOCUSS_4D.cpp  CS_LAB_export.h  GlobalVar.cpp  GlobalVar.h  GlobalVar_FOCUSS.cpp  GlobalVar_FOCUSS.h  SomeFunctions.h  SomeFunctions.hxx  Transform.cpp  Transform.h  TransformWrapper.h  hoNDDCT.cpp
reconstruction/gadgetron/CS_LAB_Gadget/src/GADGET_TOOLS/: AcquisitionFinishGadget.cpp  AcquisitionFinishGadget.h  CS_AccumulatorGadget.cpp  CS_AccumulatorGadget.h  CS_CombineGadget.cpp  CS_CombineGadget.h  CS_GlobalVar.cpp  CS_GlobalVar.h  CS_MRIImageToAcquisitionGadget.cpp  CS_MRIImageToAcquisitionGadget.h  ImageAccumulatorGadget.cpp  ImageAccumulatorGadget.h  ImageSaveHDFGadgetCPLX.cpp  ImageSaveHDFGadgetCPLX.h  ImageSaveHDFGadgetFLOAT.cpp  ImageSaveHDFGadgetFLOAT.h  ImageSlicerGadget.cpp  ImageSlicerGadget.h  RegistrationGadget.cpp  RegistrationGadget.h  SlicerGadget.cpp  SlicerGadget.h  hoNDDCT.cpp  hoNDDCT.h  hoNDFFT_CS.cpp  hoNDFFT_CS.h  hoNDKLT_CS.cpp  hoNDKLT_CS.h
reconstruction/gadgetron/CS_LAB_Gadget/src/LAP_GADGET/: CMakeLists.txt  LAPRegistrationGadget.cpp  LAPRegistrationGadget.h  README.txt  cs_lab_lap_namespaces.cpp  cs_lab_lap_namespaces.h  gaussianfilterbasis.cpp  gaussianfilterbasis.h  lap3d.cpp  lap3d.h  main.cpp  mynamespaces.cpp  mynamespaces.h  shiftengine3d.cpp  shiftengine3d.h
reconstruction/gadgetron/CS_LAB_Gadget/src/LAP_GADGET/sigpack/: Doxyfile  sigpack.h
reconstruction/gadgetron/CS_LAB_Gadget/src/LAP_GADGET/sigpack/base/: base.h
reconstruction/gadgetron/CS_LAB_Gadget/src/REGISTRATION/: RegistrationGadget.cpp  RegistrationGadget.h
reconstruction/gadgetron/CS_LAB_Gadget/src/RETRO/: .CS_Retro_AccumulatorGadget.h.kate-swp  CS_Retro_AccumulatorGadget.cpp  CS_Retro_AccumulatorGadget.h  CS_Retro_ImageCombinerGadget.cpp  CS_Retro_ImageCombinerGadget.h  CS_Retro_ImageFormatForSavingGadget.cpp  CS_Retro_ImageFormatForSavingGadget.h  CS_Retro_ImageSplitterGadget.cpp  CS_Retro_ImageSplitterGadget.h  CS_Retro_NavigatorGadget.cpp  CS_Retro_NavigatorGadget.h  CS_Retro_PCANavigatorGadget.cpp  CS_Retro_PCANavigatorGadget.h  CS_Retro_PopulationGadget.cpp  CS_Retro_PopulationGadget.h  CS_Retro_PostBARTGadget.cpp  CS_Retro_PostBARTGadget.h  CS_Retro_PreBARTGadget.cpp  CS_Retro_PreBARTGadget.h
(+1155 files in other folders)
